# factorio-working-group

./: .gitignore  Makefile  README.md  attention_model.pt  best_model.pt  inversion_2.py  pipeline.ipynb  pyproject.toml  repr5_trainer.ipynb  repr5trainer.ipynb  train_cnn.ipynb  train_model.py  training_dqn.py
blueprint_pipeline/: README.md  intake.py  new_intake.py
data/: .gitignore  README.md  blueprints_with_strings2.csv  factorio-tech_pg06-08.csv
data/raw/: blueprints_with_strings3.csv  factorio-tech_11.csv  factorio-tech_12.csv  factorio-tech_15.csv  factorio-tech_16.csv  factorio-tech_18.csv  factorio-tech_20.csv  factorio-tech_21.csv  factorio-tech_23.csv  factorio-tech_25.csv  factorio-tech_27.csv  factorio-tech_29.csv  factorio-tech_3.csv  factorio-tech_30.csv  factorio-tech_31.csv  factorio-tech_33.csv  factorio-tech_36.csv  factorio-tech_37.csv  factorio-tech_38.csv  factorio-tech_39.csv  factorio-tech_4.csv  factorio-tech_40.csv  factorio-tech_43.csv  factorio-tech_45.csv  factorio-tech_47.csv  factorio-tech_48.csv  factorio-tech_49.csv  factorio-tech_5.csv  factorio-tech_50.csv  factorio-tech_52.csv  (+26 more)
factorio_analysis/: __init__.py
models/: attention_model.pt  binary_model.pt  constrained_attention_model.pt  constrained_binary_model.pt
src/: demo.py  factorio-tech_blueprint_scraper.py  machinelearning.py  model.py  processor.py  representation.py  training.py  utils.py  visualization.py
src/blueprint_pipeline/: .gitignore  Makefile  README.md  enrichment.py  models.py  pipeline.py  pyproject.toml  representation.py  utils.py
tests/: __init__.py  test_assembler_matrix.py  test_matrix_integrity_loss.py  test_new_representation.py  test_processor.ipynb  test_processor.py  test_representation.py  test_trainingdata.py
(+1547 files in other folders)
