[project]
name = "factorio-working-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "factorio-draftsman>=2.0.1",
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "matplotlib>=3.10.1",
]
